# palautusrepositorio

./: README.md
viikko2/: haara1.txt  haara2.txt  haara2_tiedosto.txt  kopio_main_tiedosto.txt  main_tiedosto.txt
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko2/verkkokauppa-1/src/: .kirjanpito.py.swp  .pankki.py.swp  .varasto.py.swp  index.py  kauppa.py  pankki.py  varasto.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/nhl-reader/: poetry.lock.save
viikko3/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko4/: retro.md
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/: .coverage  pyproject.toml
viikko4/tdd-ostoskori/: pyproject.toml
viikko4/tdd-ostoskori/src/: ostoskori.py
viikko4/tdd-ostoskori/src/tests/: ostoskori_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py
