[tool.poetry]
name = "project-reader"
version = "0.1.0"
description = ""
authors = ["Kalle Ilves <kalle.ilves@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
tomlkit = "^0.11.6"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
toml-sort = "^0.20.1"
tomlkit = "^0.11.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
